# sportsquant

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  RELEASE.md  docker-compose.yml  kind-config.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/analysis/: player_context.db
docker/: Dockerfile  Dockerfile.mlflow  Dockerfile.old  Dockerfile.poller  Dockerfile.web  Nvidia-Spark-RAPIDS-ubuntu.dockerfile  init-db.sql  kafka-ignite-consumer.dockerfile  nba-stats.Dockerfile  patch_execution_api.py  sports-platform.dockerfile  test_patch.py
docs/: README.md  adr-003-json-over-avro.md  docker.md  nfl-modules.md  observability-runbook.md  schema-ignite-persistence.sql  schema-nba-player-stats.sql  schema-nba-players.sql  schema-odds-events.sql  schema-sports-consensus.sql  unified-poller-api-fallback.md
docs/market-research/: f1-market-research.md  mlb-market-research.md  nfl-market-research.md  nhl-market-research.md
docs/merge-audit/: sportsbet-nfl-audit.md
examples/: 01_ev_calculation.ipynb  02_kelly_optimization.ipynb  03_backtesting.ipynb  04_ratings_comparison.ipynb  05_parlay_optimization.ipynb  README.md
k8s/: 01-storage-layer.yaml  02-kafka-cluster.yaml  02a-kafka-nodepool.yaml  03-timescale.yaml  04-ignite.yaml  04-ignite3-pvc.yaml  04-ignite3.yaml  04a-ignite3-configmap.yaml  04b-ignite3-jdbc-config.yaml  06-kafka-connect.yaml  06b-kafka-connect-standalone.yaml  06c-kafka-connect-json.yaml  06c-karapace-schema-registry.yaml  06c-schema-registry.yaml  08-debezium-server.yaml  09-kafka-topic-users.yaml  10-kafka-topic-line-movements.yaml  11-kafka-connector-jdbc-sink.yaml  11-schedule-kafka-topic.yaml  11-wnba-games-topic.yaml  11a-nba-stats-topics.yaml  12-nba-calendar-generator.yaml  13-timescale-schemas-configmap.yaml  14-ignite-kafka-connector.yaml  14-nfl-calendar-generator.yaml  14a-nfl-odds-poller.yaml  14b-nhl-calendar-generator.yaml  14c-nhl-odds-poller.yaml  14d-mlb-calendar-generator.yaml  14e-mlb-odds-poller.yaml  14f-f1-calendar-generator.yaml  14g-f1-odds-poller.yaml  15-nba-stats-fetcher.yaml  15-timescale-schema.yaml  15a-nba-backfill-jobs.yaml  16-odds-poller-deployment.yaml  17-stats-poller-deployment.yaml  18-schedule-poller-deployment.yaml  20-f1-topics.yaml  20-mlb-topics.yaml  (+62 more)
labs/: 01_getting_started.ipynb  02_data_ingestion.ipynb  03_single_bet_ev.ipynb  04_multi_book_middling.ipynb  05_building_backtest.ipynb  06_nfl_game_prediction.ipynb  07_ratings_systems.ipynb  08_live_workflow.ipynb  09_custom_strategy.ipynb  10_production_patterns.ipynb  README.md  build_lab_01.py  build_lab_02.py  build_lab_03.py  build_lab_04.py  build_lab_07.py  build_lab_08.py  build_lab_09.py  gen_lab10.py
notebooks/: README.md
notebooks/basketball/: 03_backtesting.ipynb  04_ratings_comparison.ipynb
notebooks/common/: 01_ev_calculation.ipynb  02_kelly_optimization.ipynb  05_parlay_optimization.ipynb
notebooks/football/: 01_nfl_player_props.ipynb  02_nfl_backtest.ipynb  03_nfl_ratings.ipynb  04_nfl_game_predict.ipynb  05_nfl_middling_and_odds.ipynb
scripts/: build_nfl_game_predict_notebook.py  build_nfl_middling_notebook.py  create-jdbc-connectors.sh  debug_transform.py  deploy.sh  diagnose-issues.sh  fetch_nba_odds.py  kafka-to-timescaledb.py  kafka-ui-portforward.sh  monitor-backfill-progress.sh  monitor-ignite.sh  monitor-kafka-topics.sh  monitor-timescaledb.sh  nba_backfill.py  nba_backfill_http.py  nba_backfill_mock.py  ntp-sync.sh  robust-portforward.sh  run_backfill.py  setup-observability.sh  test_json_producer.py  test_nba_stats.py  test_odds_direct.py  test_odds_single_request.py  unified-poller-entrypoint.sh  verify-observability.sh  verify-system.sh
src/quantitative_sports/: __init__.py
src/quantitative_sports/cli/: __init__.py  main.py
src/quantitative_sports/data/: __init__.py  nfl.py
src/quantitative_sports/features_advanced/: __init__.py  massey_ratings.py  raptor_box.py  raptor_composite.py
src/quantitative_sports/notifications/: __init__.py  builder.py  config.py  discord.py  formatter.py  hero_card.py  models.py  notification_sender.py  pipeline.py  pipeline_integration.py  queue.py  renderer.py  sender.py  service.py  webhook.py
src/quantitative_sports/util/: exceptions.py  metrics.py  nba_logging.py  nfl_logging.py  time_utils.py  validation.py
src/quantitative_sports/web/: __init__.py  app.py  paths.py
src/sportsquant/api/: __init__.py  betting_api.py
src/sportsquant/cli/: __init__.py  main.py
src/sportsquant/data/: __init__.py  nfl.py
src/sportsquant/features_advanced/: __init__.py  massey_ratings.py  raptor_box.py  raptor_composite.py
src/sportsquant/notifications/: __init__.py  builder.py  discord.py  formatter.py  hero_card.py  models.py  notification_sender.py  pipeline.py  pipeline_integration.py  queue.py  renderer.py  sender.py  service.py  webhook.py
src/sportsquant/util/: exceptions.py  metrics.py  names.py  nba_fs.py  nfl_logging.py  time_utils.py  validation.py
src/sportsquant/web/: __init__.py  app.py  paths.py
tests/: conftest.py
tests/test_api/: test_auth.py  test_web_ui.py
tests/test_core/test_backtest/: test_backtest.py  test_core_backtest.py  test_regime.py
tests/test_core/test_betting/: test_engine.py  test_kelly.py  test_kelly_enhanced.py  test_metrics_factory.py  test_middling.py  test_odds_utils.py
tests/test_core/test_risk/: test_portfolio.py
tests/test_data/: test_nfl.py
tests/test_data/test_pipeline/: test_dual_write.py  test_kafka_ignite_consumer.py  test_producer_config.py  test_repositories.py  test_spark_data_producer.py
tests/test_data/test_schemas/: test_repositories.py  test_schema_repositories.py
tests/test_data/test_sources/: test_curated_io.py  test_draftkings_utils.py  test_injuries.py  test_odds_api_game_lines.py  test_odds_api_transform.py  test_pinnacle.py
tests/test_models/test_analysis/: test_alternate_line_eval.py  test_backtest.py  test_cross_site_ev.py  test_distribution_models.py  test_ev.py  test_mlb_eval.py  test_player_context.py  test_slip.py
tests/test_util/: test_time_utils.py
(+290 files in other folders)
