[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sportsquant"
version = "0.1.0"
description = "QuantLib for sports betting — open-source quantitative analysis toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Core Data Science ---
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",

    # --- Web/HTTP ---
    "httpx[http2]>=0.27.0",
    "playwright>=1.57.0",
    "requests>=2.31.0",

    # --- Data Validation ---
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # --- CLI ---
    "click>=8.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",

    # --- API Server ---
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",

    # --- Database ---
    "duckdb>=0.9.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",

    # --- Streaming/Messaging ---
    "kafka-python>=2.0.2",

    # --- Observability ---
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "python-json-logger>=2.0.0",
    "prometheus-client>=0.19.0",

    # --- Visualization ---
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "Pillow>=10.0.0",

    # --- File Formats ---
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0",

    # --- Utilities ---
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.9",
    "urllib3>=2.0.0",
    "tqdm>=4.66.0",

    # --- NBA Data ---
    "nba-api>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "rapidfuzz>=3.0.0",
    "mypy>=1.10.0",
    "pylint>=4.0.4",
    "pyright>=1.1.408",
]
spark = [
    "pyspark>=3.5.0",
]
k8s = [
    "checkov>=3.2.499",
    "pyignite>=0.6.0",
]

[project.scripts]
sportsquant = "sportsquant.cli.main:app"
sportsquant-nba = "sportsquant.cli.nba_main:app"
sportsquant-poller = "sportsquant.infra.poller.main:main"
sportsquant-api = "sportsquant.api.betting_api:app"
sportsquant-web = "sportsquant.web.app:create_app"

[tool.hatch.build.targets.wheel]
packages = ["src/sportsquant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
