[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantitative_sports"
version = "0.2.0"
description = "QuantLib for sports betting — open-source quantitative analysis toolkit"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "VeeDubin", email = "veedubin@neuralgentics.dev"}
]
license = {text = "MIT"}
keywords = [
    "sports-betting",
    "quantitative-finance",
    "expected-value",
    "kelly-criterion",
    "middling",
    "nfl",
    "odds-api",
    "timescaledb",
    "backtesting",
    "xgboost",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
    "Topic :: Database",
]
dependencies = [
    "asyncpg>=0.29.0",
    "click>=8.0.0",
    "duckdb>=0.9.0",
    "httpx[http2]>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dateutil>=2.9",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "nba-api>=1.8.0",
    "nbconvert>=7.16.0",
    "nbformat>=5.10.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.9",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.0",
    "sqlalchemy>=2.0.0",
    "xlsxwriter>=3.1.0",
    "xgboost>=2.1.0",
]
poller = [
    "asyncpg>=0.29.0",
    "httpx[http2]>=0.27.0",
    "prefect>=3.0.0",
    "prometheus-client>=0.19.0",
    "pydantic-settings>=2.1.0",
    "python-json-logger>=2.0.0",
]
web = [
    "aiofiles>=23.0.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.109.0",
    "jinja2>=3.1.0",
    "markdown>=3.6.0",
    "nbconvert>=7.16.0",
    "nbformat>=5.10.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.27.0",
]
dev = [
    "mypy>=1.10.0",
    "prefect>=3.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "testcontainers>=4.7.0",
]

[project.urls]
Homepage = "https://github.com/Veedubin/quantitative-sports"
Repository = "https://github.com/Veedubin/quantitative-sports"
Issues = "https://github.com/Veedubin/quantitative-sports/issues"
Changelog = "https://github.com/Veedubin/quantitative-sports/releases"

[project.scripts]
quantitative_sports = "quantitative_sports.cli.main:app"
quant-sports-poller = "quantitative_sports.infra.poller.main:main"
quant-sports-web = "quantitative_sports.web.app:create_app"

[tool.hatch.build.targets.wheel]
packages = ["src/quantitative_sports"]
exclude = [".venv", "venv", "env", "build", "dist", "*.egg-info", "__pycache__", "tests", "docs", "labs"]

[tool.hatch.build.targets.sdist]
exclude = [".venv", "venv", "env", "build", "dist", "*.egg-info", "__pycache__", "tests", "docs", "labs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true